Fix text wrapping in home page intro box
Closes #130

--- a/newdle/client/src/components/home/HomePage.module.scss
+++ b/newdle/client/src/components/home/HomePage.module.scss
@@ -18,6 +18,8 @@ $max-width: 700px;
 
     li {
       counter-increment: list-counter;
+      display: flex;
+      align-items: center;
 
       &:not(:last-child) {
         margin-bottom: 1.5em;
